[metadata]
name = exert
version = 0.1.0
description = Declarively apply converter functions to class attributes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rednafi/exert
author = Redowan Delowar
author_email = redowan.nafi@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.8.0

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev_deps =
    black
    flake8
    isort
    mypy
    pytest
    pytest-coverage
    twine
