[metadata]
name = exert
version = 0.3.3
description = Declarively apply converter functions to class attributes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rednafi/exert
author = Redowan Delowar
author_email = redowan.nafi@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython


[options]
packages = find:
include_package_data = True
python_requires = >=3.7.0
install_requires =
    typing_extensions>=4.0.0; python_version <= "3.8"

[options.package_data]
exert = py.typed

[options.packages.find]
exclude =
    tests*

[options.extras_require]
dev_deps =
    black
    flake8
    isort
    mypy
    pytest
